--- a/src/assets/scss/_palette.scss
+++ b/src/assets/scss/_palette.scss
@@ -1,24 +1,26 @@
+// <----- Palette ----->
 
-    // Color Cube
-$white: #ffffff;
-$woodsmoke: #111117;
+// --- colori principali della pagina 
+$primary: white;
+$secondary: black;
 $bluelagoon: #038484;
-$gravel: #504f51;
+
+// paragrafi - testi footer  
+$lightgrey: #979797;
+
+// testi secondari - pretitle - icone 
+$lightlagoon: #0FA8A4;
 $pumice: #bcbebc;
-$santafe: #ae795e;
-$fountainblue: #52bbba;
-$anakiwa: #8fffff;
-  
-    // Median Cut
-$shark: #1d2023;
+
+// hover icone 
+$darklagoon: #097470;
+
+// --- colori di sfondo 
 $graynurse: #eef1ed;
-$seanymph: #6ca0a0;
-$smaltblue: #56808e;
-$santafe-m: #a96b53;
-  
-    // Material Design
-$elm: #1c918e;
-$santafe-muted: #ab6b53;
 $bigstone: #122439;
-$masala: #443c3b;
-$akaroa: #d6b9a3;
+$seanymph: #6ca0a0;
+
+// footer 
+$woodsmoke: #111117;
+$lightsmoke: #19191f;
+
